adjusting logo size and adding margins with medium breakpoint

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-primary">
   <a class="navbar-brand" [routerLink]="['']"
     ><img src="assets/logo.svg" /> Pure OKRs</a
   >
