--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <main class="bd-masthead bg-dark" role="main">
   <div class="container-fluid pt-4">
     <div class="row">
-      <div class="col px-4">
+      <div class="col p-0">
         <router-outlet></router-outlet>
       </div>
     </div>
