--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,42 +5,98 @@
         <div class="form-group">
           <label for="company">Company</label>
           <em *ngIf="company.touched && company.invalid">Required</em>
-          <input id="company" type="text" class="form-control" placeholder="Enter company" 
-          formControlName="company" required>
+          <input
+            id="company"
+            type="text"
+            class="form-control"
+            placeholder="Enter company"
+            formControlName="company"
+            required
+          />
         </div>
         <div class="form-group">
           <label for="name">Full name</label>
           <em *ngIf="name.touched && name.invalid">Required</em>
-          <input id="name" type="text" class="form-control" placeholder="Enter your name"
-            formControlName="name" required>
+          <input
+            id="name"
+            type="text"
+            class="form-control"
+            placeholder="Enter your name"
+            formControlName="name"
+            required
+          />
         </div>
         <div class="form-group">
           <label for="email">Email</label>
           <em *ngIf="email.touched && email.value.length === 0">Required</em>
-          <em *ngIf="email.touched && email.value.length > 0 && email.invalid">Invalid email</em>
-          <input id="email" name="email" type="email" class="form-control" formControlName="email" required
-            placeholder="Enter email">
+          <em *ngIf="email.touched && email.value.length > 0 && email.invalid"
+            >Invalid email</em
+          >
+          <input
+            id="email"
+            name="email"
+            type="email"
+            class="form-control"
+            formControlName="email"
+            required
+            placeholder="Enter email"
+          />
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <em *ngIf="password.touched && password.value.length === 0">Required</em>
-          <em *ngIf="password.touched && password.value.length > 0 && password.invalid">At least 6 characters</em>
-          <input id="password" type="password" class="form-control" formControlName="password" name="password"
-            placeholder="Password" minlength="6" required>
+          <em *ngIf="password.touched && password.value.length === 0"
+            >Required</em
+          >
+          <em
+            *ngIf="
+              password.touched && password.value.length > 0 && password.invalid
+            "
+            >At least 6 characters</em
+          >
+          <input
+            id="password"
+            type="password"
+            class="form-control"
+            formControlName="password"
+            name="password"
+            placeholder="Password"
+            minlength="6"
+            required
+          />
         </div>
         <div class="form-group">
           <label for="terms">
-            <input id="terms" type="checkbox" name="terms" formControlName="terms" required>
+            <input
+              id="terms"
+              type="checkbox"
+              name="terms"
+              formControlName="terms"
+              required
+            />
             <small class="ml-1">
-              I accept that PureOKRs will process data as described <a routerLink="/privacy" target="_blank">here</a>.
+              I accept that PureOKRs will process data as described
+              <a routerLink="/privacy" target="_blank">here</a>.
             </small>
           </label>
         </div>
-        <div *ngIf="message" class=" alert alert-warning mx-1 my-0">{{message}}</div>
-        <button type="submit" class="btn btn-success m-2" [disabled]="!registerForm.valid">Register</button>
-        <br>
-        <button type="button" class="btn btn-link btn-sm" [routerLink]="['/login']">Already have a user? Log in
-          here.</button>
+        <div *ngIf="message" class="alert alert-warning mx-1 my-0">
+          {{ message }}
+        </div>
+        <button
+          type="submit"
+          class="btn btn-success m-2"
+          [disabled]="!registerForm.valid"
+        >
+          Register
+        </button>
+        <br />
+        <button
+          type="button"
+          class="btn btn-link btn-sm"
+          [routerLink]="['/login']"
+        >
+          Already have a user? Log in here.
+        </button>
       </form>
     </div>
   </div>
@@ -48,8 +104,8 @@
     <section class="text-light rounded p-4">
       <h5>Welcome!</h5>
       <p>
-        Register your company and get started with creating your first objectives and key results.
-        It's simple and powerful.
+        Register your company and get started with creating your first
+        objectives and key results. It's simple and powerful.
       </p>
       <h5>Why Objectives and Key Results?</h5>
       <ul>
@@ -63,16 +119,16 @@
           Focus on what matters
         </li>
       </ul>
-      <h5>PureOKRs Features</h5>
+      <h5>Pure OKRs Features</h5>
       <ul>
         <li>
-          Easy to use
+          OKR tree view
         </li>
         <li>
-          Fully cloud based
+          OKR list view
         </li>
         <li>
-          Free for the first 25 users
+          Invite colleagues or team mates by email
         </li>
       </ul>
     </section>
