trying to remove unnecessary margins on mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <main class="bd-masthead bg-dark" role="main">
-  <div class="container-fluid pt-4">
+  <div class="container-fluid pt-4 px-0">
     <div class="row">
       <div class="col p-0">
         <router-outlet></router-outlet>
