trying to remove unnecessary margins on mobile

--- a/src/app/okr-list/okr-node/okr-node.component.html
+++ b/src/app/okr-list/okr-node/okr-node.component.html
@@ -1,16 +1,31 @@
 <div class="okr card rounded bg-light border-0 p-2 my-1">
   <span>
     <span class="dropdown">
-      <a class="btn btn-sm bg-light p-0 m-0" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
-        aria-expanded="false">
+      <a
+        class="btn btn-sm bg-light p-0 m-0"
+        id="dropdownMenuButton"
+        data-toggle="dropdown"
+        aria-haspopup="true"
+        aria-expanded="false"
+      >
         <span octicon="kebab-horizontal" width="15px"></span>
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" (click)="addChild(okrHierarchyNode.data.okr._id)" data-toggle="modal" data-target="#newOkrModal">
+        <a
+          class="dropdown-item"
+          (click)="addChild(okrHierarchyNode.data.okr._id)"
+          data-toggle="modal"
+          data-target="#newOkrModal"
+        >
           <fa-icon [icon]="faPlusCircle"></fa-icon>
           Add child OKR
         </a>
-        <a class="dropdown-item" (click)="editOkrNode(okrHierarchyNode)" data-toggle="modal" data-target="#editOkrModal" >
+        <a
+          class="dropdown-item"
+          (click)="editOkrNode(okrHierarchyNode)"
+          data-toggle="modal"
+          data-target="#editOkrModal"
+        >
           <fa-icon [icon]="faPen"></fa-icon>
           Edit
         </a>
@@ -22,64 +37,101 @@
     </span>
     <p *ngIf="owner" class="badge badge-primary float-right m-1">
       <fa-icon [icon]="faUserNinja"></fa-icon>
-      {{owner.name}}
+      {{ owner.name }}
     </p>
-    <p *ngIf="!averageProgress && averageProgress!=0" class="badge badge-secondary float-right m-1">
+    <p
+      *ngIf="!averageProgress && averageProgress != 0"
+      class="badge badge-secondary float-right m-1"
+    >
       <fa-icon [icon]="faBatteryEmpty"></fa-icon>
       0%
     </p>
-    <p *ngIf="averageProgress<30" class="badge badge-secondary float-right m-1">
+    <p
+      *ngIf="averageProgress < 30"
+      class="badge badge-secondary float-right m-1"
+    >
       <fa-icon [icon]="faBatteryEmpty"></fa-icon>
-      {{averageProgress}}%
+      {{ averageProgress }}%
     </p>
-    <p *ngIf="averageProgress<70 && averageProgress>=30" class="badge badge-primary float-right m-1">
+    <p
+      *ngIf="averageProgress < 70 && averageProgress >= 30"
+      class="badge badge-primary float-right m-1"
+    >
       <fa-icon [icon]="faAdjust"></fa-icon>
-      {{averageProgress}}%
+      {{ averageProgress }}%
     </p>
-    <p *ngIf="averageProgress>=70" class="badge badge-success float-right m-1">
+    <p
+      *ngIf="averageProgress >= 70"
+      class="badge badge-success float-right m-1"
+    >
       <fa-icon [icon]="faCheckCircle"></fa-icon>
-      {{averageProgress}}%
+      {{ averageProgress }}%
     </p>
   </span>
   <h5 class="card-title">
-    <span>{{okrHierarchyNode.data.okr.objective}}</span>
+    <span>{{ okrHierarchyNode.data.okr.objective }}</span>
   </h5>
   <div class="card-body py-0 pr-0 m-0">
-    <div class="row">
-      <ul *ngIf="okrHierarchyNode.data.okr.keyResults" class="list-group">
-        <li *ngFor="let kr of okrHierarchyNode.data.okr.keyResults"
-          class="list-group-item bg-white border border-primary rounded-0 border-right-0 border-top-0 border-bottom-0 py-1 my-1 mr-2">
-          {{kr?.keyResult}}
-          <span *ngIf="!kr.progress && kr.progress!=0" class="badge badge-secondary">
-            <fa-icon [icon]="faBatteryEmpty"></fa-icon>
-            0%
-          </span>
-          <span *ngIf="kr.progress<30" class="badge badge-secondary">
-            <fa-icon [icon]="faBatteryEmpty"></fa-icon>
-            {{kr.progress}}%
-          </span>
-          <span *ngIf="kr.progress>=30 && kr.progress<70" class="badge badge-primary">
-            <fa-icon [icon]="faAdjust"></fa-icon>
-            {{kr.progress}}%
-          </span>
-          <span *ngIf="kr.progress>=70" class="badge badge-success">
-            <fa-icon [icon]="faCheckCircle"></fa-icon>
-            {{kr.progress}}%
-          </span>
-        </li>
-      </ul>
-    </div>
-    <div *ngIf="!okrHierarchyNode.data.isChildrenVisible && okrHierarchyNode.children?.length > 0" class="btn btn-link p-0 m-0" (click)="showChildren()">
+    <ul *ngIf="okrHierarchyNode.data.okr.keyResults" class="list-group">
+      <li
+        *ngFor="let kr of okrHierarchyNode.data.okr.keyResults"
+        class="list-group-item bg-white border border-primary rounded-0 border-right-0 border-top-0 border-bottom-0 py-1 my-1 mr-2"
+      >
+        {{ kr?.keyResult }}
+        <span
+          *ngIf="!kr.progress && kr.progress != 0"
+          class="badge badge-secondary"
+        >
+          <fa-icon [icon]="faBatteryEmpty"></fa-icon>
+          0%
+        </span>
+        <span *ngIf="kr.progress < 30" class="badge badge-secondary">
+          <fa-icon [icon]="faBatteryEmpty"></fa-icon>
+          {{ kr.progress }}%
+        </span>
+        <span
+          *ngIf="kr.progress >= 30 && kr.progress < 70"
+          class="badge badge-primary"
+        >
+          <fa-icon [icon]="faAdjust"></fa-icon>
+          {{ kr.progress }}%
+        </span>
+        <span *ngIf="kr.progress >= 70" class="badge badge-success">
+          <fa-icon [icon]="faCheckCircle"></fa-icon>
+          {{ kr.progress }}%
+        </span>
+      </li>
+    </ul>
+    <div
+      *ngIf="
+        !okrHierarchyNode.data.isChildrenVisible &&
+        okrHierarchyNode.children?.length > 0
+      "
+      class="btn btn-link p-0 m-0"
+      (click)="showChildren()"
+    >
       <fa-icon [icon]="faChevronDown"></fa-icon>
-      {{okrHierarchyNode.children.length}}
+      {{ okrHierarchyNode.children.length }}
     </div>
-    <div *ngIf="okrHierarchyNode.data.isChildrenVisible && okrHierarchyNode.children?.length > 0" class="btn btn-link p-0 m-0" (click)="hideChildren()">
+    <div
+      *ngIf="
+        okrHierarchyNode.data.isChildrenVisible &&
+        okrHierarchyNode.children?.length > 0
+      "
+      class="btn btn-link p-0 m-0"
+      (click)="hideChildren()"
+    >
       <fa-icon [icon]="faChevronUp"></fa-icon>
     </div>
   </div>
 </div>
 <div *ngIf="okrHierarchyNode.data.isChildrenVisible" class="ml-4 mt-1">
-  <app-okr-node *ngFor="let child of okrHierarchyNode.children" [okrHierarchyNode]="child" 
-  (deletedNode)=hideDeletedNode($event) (okrNodeToEdit)="editOkrNode($event)" (parentId)="addChild($event)">
+  <app-okr-node
+    *ngFor="let child of okrHierarchyNode.children"
+    [okrHierarchyNode]="child"
+    (deletedNode)="hideDeletedNode($event)"
+    (okrNodeToEdit)="editOkrNode($event)"
+    (parentId)="addChild($event)"
+  >
   </app-okr-node>
 </div>
