removing too wide padding for mobile in login and register components

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm pt-4">
-    <div class="text-light rounded p-4">
+    <div class="text-light rounded p-1 p-sm-4">
       <form
         [formGroup]="loginForm"
         (ngSubmit)="login(loginForm.value)"
