--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm">
-    <div class="text-light rounded p-4">
+    <div class="text-light rounded p-1 p-sm-4">
       <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate>
         <div class="form-group">
           <label for="company">Company</label>
