--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row m-0">
   <div class="col-sm">
     <div class="text-light rounded p-1 p-sm-4">
       <form [formGroup]="registerForm" (ngSubmit)="register()" novalidate>
